@@ -1,0 +1,28 @@
+<?php
+if (!defined ('TYPO3_MODE')) {
+	die('Access denied.');
+}
+
+$TCA['tx_oelib_test'] = array(
+	'ctrl' => array(
+		'title' => 'LLL:EXT:oelib/locallang_db.xml:tx_oelib_test',
+		'readOnly' => 1,
+		'adminOnly' => 1,
+		'rootLevel' => 1,
+		'label' => 'title',
+		'tstamp' => 'tstamp',
+		'crdate' => 'crdate',
+		'cruser_id' => 'cruser_id',
+		'versioningWS' => true,
+		'default_sortby' => 'ORDER BY uid',
+		'delete' => 'deleted',
+		'enablecolumns' => array(
+			'disabled' => 'hidden',
+			'starttime' => 'starttime',
+			'endtime' => 'endtime'
+		),
+		'dynamicConfigFile' => t3lib_extMgm::extPath($_EXTKEY).'tca.php',
+		'iconfile' => t3lib_extMgm::extRelPath($_EXTKEY).'icon_tx_oelib_test.gif'
+	)
+);
+?>
