@@ -1,0 +1,64 @@
+<?php
+if (!defined ('TYPO3_MODE')) {
+	die('Access denied.');
+}
+
+$TCA['tx_oelib_test'] = array(
+	'ctrl' => $TCA['tx_oelib_test']['ctrl'],
+	'interface' => array(
+		'showRecordFieldList' => 'hidden,starttime,endtime,title'
+	),
+	'columns' => array(
+		'hidden' => array(
+			'exclude' => 1,
+			'label' => 'LLL:EXT:lang/locallang_general.xml:LGL.hidden',
+			'config' => array(
+				'type' => 'check',
+				'default' => '0'
+			)
+		),
+		'starttime' => array(
+			'exclude' => 1,
+			'label' => 'LLL:EXT:lang/locallang_general.xml:LGL.starttime',
+			'config' => array(
+				'type' => 'none',
+				'size' => '8',
+				'max' => '20',
+				'eval' => 'date',
+				'default' => '0',
+				'checkbox' => '0'
+			)
+		),
+		'endtime' => array(
+			'exclude' => 1,
+			'label' => 'LLL:EXT:lang/locallang_general.xml:LGL.endtime',
+			'config' => array(
+				'type' => 'none',
+				'size' => '8',
+				'max' => '20',
+				'eval' => 'date',
+				'checkbox' => '0',
+				'default' => '0',
+				'range' => array(
+					'upper' => mktime(0,0,0,12,31,2020),
+					'lower' => mktime(0,0,0,date('m')-1,date('d'),date('Y'))
+				)
+			)
+		),
+		'title' => array(
+			'exclude' => 0,
+			'label' => 'LLL:EXT:oelib/locallang_db.xml:tx_oelib_test.title',
+			'config' => array(
+				'type' => 'none',
+				'size' => '30'
+			)
+		),
+	),
+	'types' => array(
+		'0' => array('showitem' => 'title;;;;2-2-2')
+	),
+	'palettes' => array(
+		'1' => array('showitem' => 'starttime, endtime')
+	)
+);
+?>
